--- a/app/src/main/res/layout/activity_driver_dashboard.xml
+++ b/app/src/main/res/layout/activity_driver_dashboard.xml
@@ -101,7 +101,7 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/location"
+                    android:src="@drawable/maps"
                     android:layout_gravity="center_horizontal"/>
 
                 <TextView
