--- a/app/src/main/res/layout/activity_login_otp.xml
+++ b/app/src/main/res/layout/activity_login_otp.xml
@@ -7,13 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".LoginActivity"
+    tools:context=".LoginOtpActivity"
     android:layout_margin="20dp"
     android:weightSum="100"
     tools:ignore="ExtraText">
-
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +23,7 @@
             android:layout_height="32dp"
             android:layout_margin="15dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/teal_700">
+            android:backgroundTint="@color/light_gray">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -43,7 +40,7 @@
             android:layout_height="32dp"
             android:layout_margin="15dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/light_gray">
+            android:backgroundTint="@color/teal_700">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -78,18 +75,18 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/phone"
+        android:src="@drawable/baseline_password_24"
         android:layout_weight="20"/>
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter your phone number"
+        android:text="Enter your OTP sent"
         android:letterSpacing="0.08"
+        android:gravity="center_vertical"
         android:textStyle="bold"
-        android:textAlignment="center"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:layout_weight="5"
         android:textSize="25dp"/>
 
@@ -99,61 +96,56 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:weightSum="10"
+        android:weightSum="20"
         android:gravity="center">
 
 
-        <com.hbb20.CountryCodePicker
-            android:id="@+id/ccp"
-            android:layout_width="131dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/border"
-            android:elevation="10dp"
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:padding="10dp"
-            app:ccp_defaultPhoneCode="233"
-            app:ccp_arrowSize="25dp"
-            app:ccp_showFlag="true"
-            app:ccp_textSize="10dp" />
-
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:padding="10dp"
-                android:inputType="phone"
-                android:hint="Phone number"
-                android:layout_margin="10dp"
-                android:id="@+id/phone"
-                android:elevation="10dp"
-                android:background="@drawable/border"/>
+            android:id="@+id/otp"
+            android:inputType="number"
+            android:hint="OTP"
+            android:layout_margin="10dp"
+            android:elevation="10dp"
+            android:background="@drawable/border"/>
 
     </LinearLayout>
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="vertical"
         android:layout_weight="20"
         android:gravity="center_vertical">
-        
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="24dp"
-            android:id="@+id/send_otp"
-            android:layout_margin="10dp"
-            android:text="Send OTP"
+            android:id="@+id/next"
+            android:text="Next"
             android:background="@drawable/border_2"/>
 
         <ProgressBar
             android:layout_width="32dp"
             android:layout_height="wrap_content"
-            android:id="@+id/progress_bar"
+            android:id="@+id/progress_bar2"
             android:indeterminateTint="@color/teal_700"
             android:layout_gravity="center"/>
 
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Resend OTP in 30 seconds"
+        android:layout_weight="10"
+        android:id="@+id/resend_otp"
+        android:gravity="center"/>
 
 
 </LinearLayout>
