--- a/app/src/main/res/layout/activity_login_user_name.xml
+++ b/app/src/main/res/layout/activity_login_user_name.xml
@@ -7,17 +7,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".LoginActivity"
+    tools:context=".LoginUserName"
     android:layout_margin="20dp"
     android:weightSum="100"
     tools:ignore="ExtraText">
 
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="66dp"
         android:layout_weight="20"
         android:gravity="center">
 
@@ -26,7 +24,7 @@
             android:layout_height="32dp"
             android:layout_margin="15dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/teal_700">
+            android:backgroundTint="@color/light_gray">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -60,7 +58,7 @@
             android:layout_height="32dp"
             android:layout_margin="15dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/light_gray">
+            android:backgroundTint="@color/teal_700">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -73,87 +71,117 @@
         </RelativeLayout>
     </LinearLayout>
 
-
-
     <ImageView
         android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/phone"
+        android:layout_height="100dp"
+        android:src="@drawable/person"
         android:layout_weight="20"/>
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter your phone number"
+        android:text="Create account"
         android:letterSpacing="0.08"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:layout_weight="5"
         android:textSize="25dp"/>
 
 
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:weightSum="10"
-        android:gravity="center">
+        android:text="Please select your role"
+        android:letterSpacing="0.02"
+        android:textAlignment="center"
+        android:layout_weight="5"
+        android:textSize="18dp"/>
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:id="@+id/radio_group"
+            android:padding="5dp"
+            android:gravity="center"
+            android:layout_height="wrap_content" >
+
+             <RadioButton
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginRight="20dp"
+                 android:text="Parent" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Driver" />
 
 
-        <com.hbb20.CountryCodePicker
-            android:id="@+id/ccp"
-            android:layout_width="131dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/border"
-            android:elevation="10dp"
+
+        </RadioGroup>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:padding="10dp"
-            app:ccp_defaultPhoneCode="233"
-            app:ccp_arrowSize="25dp"
-            app:ccp_showFlag="true"
-            app:ccp_textSize="10dp" />
+            android:inputType="text"
+            android:hint="Username"
+            android:layout_margin="5dp"
+            android:elevation="10dp"
+            android:id="@+id/username"
+            android:background="@drawable/border"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:padding="10dp"
+            android:inputType="number"
+            android:hint="Email"
+            android:layout_margin="5dp"
+            android:elevation="10dp"
+            android:id="@+id/email"
+            android:background="@drawable/border"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:padding="10dp"
+        android:inputType="number"
+        android:hint="ID number"
+        android:layout_margin="5dp"
+        android:elevation="10dp"
+        android:id="@+id/idNumber"
+        android:background="@drawable/border"/>
 
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:padding="10dp"
-                android:inputType="phone"
-                android:hint="Phone number"
-                android:layout_margin="10dp"
-                android:id="@+id/phone"
-                android:elevation="10dp"
-                android:background="@drawable/border"/>
-
-    </LinearLayout>
-    
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         android:orientation="vertical"
         android:layout_weight="20"
         android:gravity="center_vertical">
-        
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="24dp"
-            android:id="@+id/send_otp"
-            android:layout_margin="10dp"
-            android:text="Send OTP"
+            android:id="@+id/create"
+            android:text="Create"
             android:background="@drawable/border_2"/>
 
         <ProgressBar
             android:layout_width="32dp"
             android:layout_height="wrap_content"
-            android:id="@+id/progress_bar"
+            android:id="@+id/progress_bar3"
             android:indeterminateTint="@color/teal_700"
             android:layout_gravity="center"/>
 
 
     </LinearLayout>
+
 
 
 </LinearLayout>
