--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,26 +1,26 @@
-  <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn = "navigation_view">
 
 
-<group android:checkableBehavior="single">
+    <group android:checkableBehavior="single">
 
-    <item android:id="@+id/home"
+        <item android:id="@+id/home"
         android:title="Home"
         android:icon="@drawable/home"/>
-    <item android:id="@+id/reg"
+        <item android:id="@+id/reg"
         android:title="Registration"
         android:icon="@drawable/reg"/>
-    <item android:id="@+id/trackdriver"
+        <item android:id="@+id/trackdriver"
         android:title="Track Driver"
         android:icon="@drawable/car"/>
-    <item android:id="@+id/otp"
-        android:title="Request OTP"
-        android:icon="@drawable/otp"/>
+        <item android:id="@+id/otp"
+        android:title="Ongoing Trip"
+        android:icon="@drawable/car"/>
     <item android:id="@+id/logout"
         android:title="Logout"
         android:icon="@drawable/logout"/>
-</group>
+    </group>
 
 </menu>
