--- a/app/src/main/res/layout/activity_parent_dashboard.xml
+++ b/app/src/main/res/layout/activity_parent_dashboard.xml
@@ -19,13 +19,15 @@
             android:src="@drawable/person_200"/>
 
         <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:rowCount="2"
             android:columnCount="2"
+            android:layout_below="@+id/person"
+            android:layout_centerInParent="true"
             android:layout_margin="30dp"
             android:layout_marginTop="0dp"
-            android:layout_below="@id/person">
+            android:id="@+id/grid_layout">
 
             <!-- Card 1 -->
             <androidx.cardview.widget.CardView
